[project]
name = "best-shorter"
version = "1.0.0"
description = "Best url shorter"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Cryder", email = "cronyx.developer@gmail.com" },
]
dependencies = [
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "granian[reload]>=2.7.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  ".* = Literal\\[.*\\]",
  ".* = NewType\\(.*\\)",
  "@abc\\.abstractmethod",
  "\\.\\.\\.",
  "^\\s*raise\\s*$",
  "from .* import .*",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "import .*",
  "logger\\..*",
  "logging\\..*",
  "pass",
]

[tool.coverage.run]
relative_files = true
source = ["src"]
omit = [
  "**/__init__.py",
  "src/app/main/**",
  "**/health/**",
  "**/alembic/**",
]
concurrency = ["thread"]
branch = true

[tool.deptry]
root = ["src"]
ignore = [
  "DEP002",  # Unused dependencies
  "DEP003",  # Transitive dependencies
]

[tool.pytest]
addopts = ["--color=yes", "-mnot(slow)", "-pno:cacheprovider"]
filterwarnings = []
markers = ["slow"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EXE",  # flake8-executable
  "F",  # Pyflakes
  "FAST",  # FastAPI
  "FLY",  # flynt
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PERF",  # Perflint
  "PL",  # pylint
  "PLE",  # Pylint (error)
  "PLR5501",  # Pylint Refactor: collapsible-else-if
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise (RSE)
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self (SLF)
  "SLOT",  # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
]
ignore = [
  "PLR0913",  # too-many-arguments
  "PLR0917",  # too-many-positional-arguments
  "PLR6301",  # no-self-use
  "RUF001",  # ambiguous-unicode-character-string (cyrillic)
  "RUF002",  # ambiguous-unicode-character-docstring (cyrillic)
  "RUF003",  # ambiguous-unicode-character-comment (cyrillic)
  "S311",  # suspicious-non-cryptographic-random-usage
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"scripts/dishka/plot_dependencies_data.py" = ["T201"]  # print
"src/app/outbound/persistence_sqla/alembic/**" = ["ALL"]
"tests/**" = [
  "ARG002",  # unused-method-argument
  "PLC2801",  # unnecessary-dunder-call
  "PLR2004",  # magic-value-comparison
  "PT011",  # pytest-raises-too-broad
  "S101",  # assert
  "S105",  # hardcoded-password-string
  "S106",  # hardcoded-password-func-arg
  "S107",  # hardcoded-password-default
  "SIM300",  # yoda-conditions
]
